--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: required
 install:
   - sudo pip install Pygments
   - go get github.com/spf13/hugo
-script: hugo -v -t casper
+script: hugo -v
 deploy:
   provider: s3
   access_key_id: $AWS_ACCESS_KEY
