update hugo dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
 sudo: required
 install:
   - sudo pip install Pygments
-  - go get github.com/spf13/hugo
+  - go get -u github.com/spf13/hugo
 script: hugo
 deploy:
   provider: s3
