--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,10 @@
 language: go
-go:
-  - 1.4
-sudo: required
-install:
-  - sudo pip install Pygments
-  - go get -u github.com/spf13/hugo
-script: hugo
-deploy:
-  provider: s3
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
-  bucket: solaegis.com
-  region: us-east-1
-  endpoint: solaegis.com.s3-website-us-east-1.amazonaws.com
-  local-dir: public
-  skip_cleanup: true
-  on:
-    repo: solaegis/solaegis.com
-
+install: go get -u -v github.com/spf13/hugo
+script:
+  - hugo
+  - python --version
+  - sudo pip install s3cmd
+  - s3cmd sync --delete-removed -P -M -r public/ s3://solaegis.com/
+notifications:
+    email:
+        on_failure: always
