--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: go
 install: go get -u -v github.com/spf13/hugo
 script:
-  - hugo
+  - hugo -t=casper
   - python --version
-  - sudo pip install s3cmd
+  - sudo -H pip install s3cmd
   - s3cmd sync --delete-removed -P -M -r public/ s3://solaegis.com/
 notifications:
     email:
