--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ script:
   - hugo -t=casper
   - python --version
   - sudo -H pip install s3cmd
-  - ls -l
+  - cd public/
   - s3cmd sync --delete-removed -P -M -r . s3://solaegis.com/
 notifications:
     email:
