--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,17 @@ script:
   - hugo -t=casper
   - python --version
   - sudo -H pip install s3cmd
-  - cd public/
-  - s3cmd sync --delete-removed -P -M -r . s3://solaegis.com/
+deploy:
+  provider: s3
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+  bucket: solaegis.com
+  region: us-east-1
+  endpoint: solaegis.com.s3-website-us-east-1.amazonaws.com
+  local-dir: public
+  skip_cleanup: true
+  on:
+    repo: solaegis/solaegis.com
 notifications:
     email:
         on_failure: always
