migrating to GCS

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://solaegis.com/"
+baseurl = "http://www.solaegis.com/"
 languageCode = "en-US"
 theme = "casper"
 title = "solaegis.com"
@@ -16,7 +16,7 @@ Copyright = "All rights reserved - &copy;2016"
   cover = "img/cover-page.jpg"
   author = "@solaegis"
   #authorlocation = "Guilford, CT"
-  #authorwebsite = "http://solaegis.com"
+  #authorwebsite = "http://www.solaegis.com"
   #bio= "Gay, ex-Silicon Valley, IT bit pusher living in Connecticut."
   logo = "img/logo.gif"
   googleAnalyticsUserID = "UA-6130859-4"
